manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      imagePullSecrets:
        - name: dockerhub-cred
      containers:
      - name: backend-api
        image: ${IMAGE}
        ports:
          - containerPort: 3005
