manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api-service
spec:
  selector:
    app: backend-api
  ports:
    - port: 3005
      targetPort: 3005
  type: ClusterIP
